--- a/w1/index.html
+++ b/w1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Document</title>
 </head>
 
@@ -14,17 +14,17 @@
         <ul id="menuLink">
             <li><a href="#" id="menu">&equiv; Menu</a></li>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="w1">Week 1</a></li>
+            <li><a href="index.html">Week 1</a></li>
         </ul>
     </nav>
     <header></header>
     <main>
-        <h1>Home</h1>
+        <h1>Week 1</h1>
     </main>
     <footer>
         &copy; 2020 | Portolio | Sumilang Plucena
     </footer>
-    <script src="static/js/toggleMenu.js"></script>
+    <script src="../static/js/toggleMenu.js"></script>
 </body>
 
 </html>
