--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/css/style.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </nav>
     <header></header>
     <main>
-        <h1>Home</h1>
+        <h1>WDD 330: Portolio</h1>
     </main>
     <footer>
         &copy; 2020 | Portolio | Sumilang Plucena
