--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <header></header>
     <main>
-        <h1>WDD 330: Portolio</h1>
+        <h1>WDD 330: Portfolio</h1>
     </main>
     <footer>
         &copy; 2020 | Portolio | Sumilang Plucena
