--- a/w1/index.html
+++ b/w1/index.html
@@ -50,7 +50,7 @@ Delete Item
 localStorage.removeItem('x');
 </code></pre>
         </figure>
-        <h3>Length and Clear is the same dot (.), bracket [], and storage methods</h3>
+        <h3>Length and Clear is the same for dot (.), bracket [], and storage methods</h3>
         <figure>
             <pre><code>// Get length of localStorage
 localStorage.length; 
