--- a/w1/index.html
+++ b/w1/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <ul id="menuLink">
-            <li><a href="#" id="menu">&equiv; Menu</a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html">Week 1</a></li>
+            <li><a href="#" id="menu"><strong>&equiv; Menu</strong></a></li>
+            <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
+            <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
         </ul>
     </nav>
     <header></header>
