--- a/w2/team_activity/index.html
+++ b/w2/team_activity/index.html
@@ -42,11 +42,21 @@
     <script>
         // Activity #1
         function sum(n) {
-            let total = 0;
-            for (let i = 0; i <= n; i++) {
-                total += i;
-            }
-            return total;
+            //console.log(typeof (n));
+            const number1 = parseFloat(n);
+            //console.log(number1);
+            //console.log(typeof number1);
+            console.log(parseFloat('1'));
+            console.log(parseFloat('w'));
+            console.log(NaN === parseFloat('1'));
+
+            if (!isNaN(number1)) {
+                let total = 0;
+                for (let i = 0; i <= n; i++) {
+                    total += i;
+                }
+                return total;
+            } else return 'Enter a valid number.';
         }
 
         function displayValue() {
@@ -57,6 +67,33 @@
         document.getElementById('submit').addEventListener('click', displayValue);
 
         // Activity #2
+        // function expression
+        const computeExpression = (num_1, operation, num_2) => {
+            //console.log(parseFloat(num1));
+            //console.log(parseFloat(num2) === NaN);
+            const num1 = parseFloat(num_1);
+            const num2 = parseFloat(num_2);
+
+            if (!isNaN(num1) & !isNaN(num2)) {
+                console.log(1);
+                switch (operation) {
+                    case '+':
+                        return Number(num1) + Number(num2);
+                    case 'x':
+                        return num1 * num2;
+                    case '-':
+                        return num1 - num2;
+                    default:
+                        return num1 / num2;
+                }
+            }
+            console.log(2);
+            return 'Enter a valid number.';
+        }
+
+        // arrow function
+
+
         function compute(num1, operation, num2) {
             switch (operation) {
                 case '+':
@@ -76,7 +113,7 @@
             let num1 = document.getElementById('number-1').value;
             let num2 = document.getElementById('number-2').value;
 
-            const result = compute(num1, operation, num2);
+            const result = computeExpression(num1, operation, num2);
             document.getElementById('arithmetic-result').innerHTML = result;
         }
 
