--- a/w2/index.html
+++ b/w2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Week 1 : Notes</title>
+    <title>Week 2 | Notes</title>
 </head>
 
 <body>
@@ -14,8 +14,8 @@
         <ul id="menuLink">
             <li><a href="#" id="menu"><strong>&equiv; Menu</strong></a></li>
             <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
-            <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
-            <li><a href="../w2/index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
+            <li><a href="../w1/index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
+            <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
         </ul>
     </nav>
     <header></header>
