Added link to sample code

--- a/w2/index.html
+++ b/w2/index.html
@@ -20,61 +20,10 @@
     </nav>
     <header></header>
     <main>
-        <h1>Notes</h1>
-        <p>
-            Javascript uses the following code to store and retrieve data browsers storage. So far I have tried storing
-            numbers, strings, and objects to localStorage.
-        </p>
-        <h3>Manipulating localStorage data using the dot (.) and [] bracket notation</h3>
-        <figure>
-            <pre><code>//Save and retrieve
-localStorage.x = 'value';
-or
-localStorage['x'] = 'value';
-
-//Delete
-delete localStorage.x;
-or
-delete localStorage['x'];
-</code></pre>
-        </figure>
-        <h3>Manipulating localStorage data using storage methods</h3>
-        <figure>
-            <pre><code>// Save item
-localStorage.setItem('x' , 'value');
-
-// Retrieve Item
-localStorage.getItem('x');
-Delete Item
-
-// Remote Item
-localStorage.removeItem('x');
-</code></pre>
-        </figure>
-        <h3>Length and Clear is the same for dot (.), bracket [], and storage methods</h3>
-        <figure>
-            <pre><code>// Get length of localStorage
-localStorage.length; 
-
-// Clear everything
-localStorage.clear(); 
-</code></pre>
-        </figure>
-        <h3>Looping through values stored in localStorage</h3>
-        <figure>
-            <pre><code>for (let x = 0; x &gt; localStorage.length; x++) {
-    // logs values from localStorage
-    let value = localStorage[localStorage.key(x)];
-    console.log(value);
-}
-</code></pre>
-        </figure>
-        <h3>Master Mobile UX</h3>
-        <p>Web developers are encouraged to follow the mobile-first-design thinking pattern. According to research, the
-            sales for desktop is in constant decline while the demands for mobile gadgets is on the rise. Web developers
-            should be observant rather than great listeners. Steve Jobs said, "A lot of times people don't know what
-            they want until you show it to them." The user experience should include reachability, speed, and quick
-            access to important navigation elements. Designs should be simple, intuitive, and mobile-friendly. </p>
+        <section>
+            <h4>Sample Code</h4>
+            <a href="team_activity">Go to Sample Code</a>
+        </section>
     </main>
     <footer>
         &copy; 2020 | Portfolio | Sumilang Plucena
