--- a/w2/team_activity/index.html
+++ b/w2/team_activity/index.html
@@ -19,7 +19,7 @@
         <div class="team-activity-container">
             <h3>Activity # 1</h3>
             <form onsubmit="return false;">
-                <label for="text-entry">Enter Text Here:</label>
+                <label for="text-entry">Enter Number Here:</label>
                 <input type="number" name="text-entry" id="text-entry">
                 <input type="submit" value="Submit" id="submit">
             </form>
