--- a/w2/team_activity/index.html
+++ b/w2/team_activity/index.html
@@ -16,34 +16,36 @@
         </ul>
     </nav>
     <main>
-        <div class="team-activity-container">
-            <h3>Activity # 1</h3>
-            <form onsubmit="return false;">
-                <label for="text-entry">Enter Number Here:</label>
-                <input type="number" name="text-entry" id="text-entry">
-                <input type="submit" value="Submit" id="submit">
-            </form>
-            <div id="text-entry-container" class="result-container">
-            </div>
-        </div>
-
-        <div class="team-activity-container">
-            <h3>Activity # 2</h3>
-            <form onsubmit="return false;">
-                <label for="number-1">Number 1:</label>
-                <input type="number" name="number-1" id="number-1">
-                <label for="number-2">Number 2:</label>
-                <input type="number" name="number-2" id="number-2">
-                <div class="operation">
-                    <input type="submit" value="+" id="addition-submit">
-                    <input type="submit" value="-" id="subtraction-submit">
-                    <input type="submit" value="x" id="multiplication-submit">
-                    <input type="submit" value="/" id="division-submit">
+        <section>
+            <div class="team-activity-container">
+                <h3>Activity # 1</h3>
+                <form onsubmit="return false;">
+                    <label for="text-entry">Enter Number Here:</label>
+                    <input type="number" name="text-entry" id="text-entry">
+                    <input type="submit" value="Submit" id="submit">
+                </form>
+                <div id="text-entry-container" class="result-container">
                 </div>
-            </form>
-            <div id="arithmetic-result" class="result-container">
             </div>
-        </div>
+
+            <div class="team-activity-container">
+                <h3>Activity # 2</h3>
+                <form onsubmit="return false;">
+                    <label for="number-1">Number 1:</label>
+                    <input type="number" name="number-1" id="number-1">
+                    <label for="number-2">Number 2:</label>
+                    <input type="number" name="number-2" id="number-2">
+                    <div class="operation">
+                        <input type="submit" value="+" id="addition-submit">
+                        <input type="submit" value="-" id="subtraction-submit">
+                        <input type="submit" value="x" id="multiplication-submit">
+                        <input type="submit" value="/" id="division-submit">
+                    </div>
+                </form>
+                <div id="arithmetic-result" class="result-container">
+                </div>
+            </div>
+        </section>
     </main>
     <script src="sample_code.js"></script>
 </body>
