Added link to Github

--- a/w2/index.html
+++ b/w2/index.html
@@ -367,7 +367,10 @@ for(const [key,value] of RomanNumerals.entries()) {
             <h3>Functions</h3>
             <article>
                 <h3>Playground</h3>
-                <p><a href="playground.html">Go to Playground</a></p>
+                <p><a href="playground.html">Go to Playground Result</a></p>
+                <p><a href="https://github.com/splucena/wdd330/blob/master/w2/playground.js" target="_blank">Go To JS
+                        Code</a></p>
+
             </article>
             <article>
                 <h3 class="minimal-margin-padding">Team Activity: Sample Code</h3>
