Fixed html error

--- a/w2/index.html
+++ b/w2/index.html
@@ -341,7 +341,7 @@ For Loops
 
 for (initialization ; condition ; after) { do something }
 
-for(let i=0, max=avengers.length; i < max; i++){
+for(let i=0, max=avengers.length; i &lt; max; i++){
     console.log(avengers[i]);
 }
 
