--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>
         <ul id="menuLink">
             <li><a href="#" id="menu">&equiv; Menu</a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="w1">Week 1</a></li>
-            <li><a href="w2">Week 2</a></li>
+            <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
+            <li><a href="w1">&nbsp;&nbsp;&nbsp;Week 1</a></li>
+            <li><a href="w2">&nbsp;&nbsp;&nbsp;Week 2</a></li>
         </ul>
     </nav>
     <header></header>
