Updated main index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>WDD 330: Portfolio</h1>
     </main>
     <footer>
-        &copy; 2020 | Portolio | Sumilang Plucena
+        &copy; 2020 | Portfolio | Sumilang Plucena
     </footer>
     <script src="static/js/toggleMenu.js"></script>
 </body>
