Added solution to number 6

--- a/w3/team_activity/activity_day_1.html
+++ b/w3/team_activity/activity_day_1.html
@@ -271,6 +271,9 @@
     // goto the link above and open the console. Paste the following two lines in.  That will create a list of links in memory that you can reference through the console. Use that list to finish the problem.
     // const category = document.querySelector('.mw-category');
     // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //             .map(link => link.textContent)
+    //             .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
