--- a/w3/team_activity/activity_day_1.html
+++ b/w3/team_activity/activity_day_1.html
@@ -264,7 +264,7 @@
       let yAge = y.passed - y.year;
       return yAge - xAge;
     })
-    console.log(inventorsSortYearsLived);
+    console.table(inventorsSortYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
