--- a/w3/index.html
+++ b/w3/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Week 2 | Notes</title>
+    <title>Week 3 | Notes</title>
 </head>
 
 <body>
@@ -150,7 +150,8 @@ const superheroes = {
     }
 }
 
-// Nested objects can be accessed by referencing each property name in order or using either the dot or bracket notation
+// Nested objects can be accessed by referencing each property name 
+in order or using either the dot or bracket notation
 
 superheroes.superman.name;
 >> 'Clark Kent'                            
